wn-25 midterms edits till q8

--- a/problems/wn25-midterm/q01.md
+++ b/problems/wn25-midterm/q01.md
@@ -31,7 +31,7 @@ Here:
 
 - We want just the column `"minutes"`, so we supply it as a string as the second input to `loc`.
 
-Now, we have a Series with the minutes of all orders that `"WOLVAA01"` has reviewed; calling the `.sort_values()` method on this Series will give us back another Series with the minutes of the orders sorted by default in ascending order. Since we are looking for the second fastest order, we can then use `iloc` to extract this value. As python is zero-indexed this value will be 1. 
+Now, we have a Series with the minutes of all orders that `"WOLVAA01"` has reviewed; calling the `.sort_values()` method on this Series will give us back another Series with the minutes of the orders sorted by default in ascending order. Since we are looking for the second fastest order, we can then use `iloc` to extract this value. As Python is zero-indexed this value will be 1. 
 
 Similarly, if you specify `ascending=False` as a parameter to `.sort_values()`, the orders will be sorted in descending order with the order taking the longest amount of time being on top. In such a case, we would want to extract the second last element from the series.
 
