--- a/problems/wn25-midterm/q02.md
+++ b/problems/wn25-midterm/q02.md
@@ -28,13 +28,13 @@ corresponding to the **proportion of drivers** who are consistent.
 
 **Answer**
 
-- `(i) "Driver"` -  we use `groupby("Driver")` because we want to check the consistency of ratings for each individual driver. By grouping by "Driver," we are able to look at each driver's set of ratings across their deliveries.
+- (i): `"Driver"`. We use `groupby("Driver")` because we want to check the consistency of ratings for **each individual driver**. By grouping by `"Driver"`, we are able to look at each driver's set of ratings across their deliveries.
 
-- `(ii) "rating"` - we want to check whether all ratings for a given driver are the same. 
+- (ii): `"rating"`. We want to check whether all `"rating"` values for a given `"Driver"` are the same. To do so, we’ll need to look at a Series of `"rating"` values for each `"Driver"`, so that’s the column we extract here.
 
-- `(iii) agg` -  The `.agg()` function allows us to apply an aggregation function to each group (driver in this case). This is necessary because we are checking a condition (whether the ratings are the same) for each driver, and `agg` allows us to apply a function that evaluates this condition across all the ratings of a driver.
+- (iii): `agg`. The `agg` method allows us to apply an aggregation function to each group (each `"Driver"` in this case). This is necessary because we are checking a condition across an entire group of ratings rather than filtering individual rows. It’s also worth noting that since `.mean()` is used at the end, the `agg` step must be producing a series of Boolean values (`True` or `False`), one for each `"Driver"`. Each value represents whether that **driver's ratings are consistent**.
 
-- `(iv) x.max() == x.min() or x.nunique() == 1` : This is the boolean statement in our `f` function that checks if a driver's ratings are consistent. `x.max() == x.min()` checks if all ratings are the same because if they are, the maximum and minimum will be equal. Alternatively, `x.nunique() == 1` checks if there is only one unique rating, ensuring consistency. Both conditions together guarantee that the driver’s ratings haven’t changed.
+- (iv): `x.max() == x.min() or x.nunique() == 1`. This is the Boolean statement used in the `f` function to check whether a `"Driver"`'s ratings are consistent. `x.max() == x.min()` confirms that all ratings are identical, since both the maximum and minimum must be the same if no variation exists. `x.nunique() == 1` achieves the same goal by checking directly whether there is only one unique rating. Either approach is valid, and there are several other possibilities too, such as checking `x.std() == 0` or using `x.eq(x.iloc[0]).all()`.
 
 
 
