--- a/problems/wn25-midterm/q03.md
+++ b/problems/wn25-midterm/q03.md
@@ -3,11 +3,11 @@
 Suppose the expression below evaluates to `1`.
 
 ```python
-    (orders[orders["type"] == "Snack"]["driver"]
-     .value_counts()
-     .value_counts()
-     .shape[0]
-    )
+(orders[orders["type"] == "Snack"]["driver"]
+ .value_counts()
+ .value_counts()
+ .shape[0]
+)
 ```
 
 What can we conclude about `orders`?
@@ -20,14 +20,13 @@ What can we conclude about `orders`?
 ( ) Every driver that made a `"Snack"` delivery did not make any other kind of delivery.
 
 # BEGIN SOLUTION
-**Answer**: `Every driver made exactly 0 or exactly  k "Snack" deliveries, where k is some positive constant.`
+**Answer**: Every driver made exactly 0 or exactly $k$ `"Snack"` deliveries, where $k$ is some positive constant.
 
-The expression filters the `orders` dataframe to include only rows where the `type` column is equal to `"Snack"`. We are focusing on the drivers who made "Snack" deliveries. Then `.value_counts()` tells us how many "Snack" deliveries each driver has made. For example, if Driver A made 3 Snack deliveries, Driver A will have a count of 3. After the first `.value_counts()`, the second `.value_counts()` counts how many drivers have made the same number of "Snack" deliveries. 
+The expression runs a query on the `orders` DataFrame, selecting only rows where the `"type"` is equal to `"Snack"`. This narrows the focus to the set of deliveries that were for `"Snack"` items. The code then selects the `"driver"` column to identify which driver handled each `"Snack"` delivery.
 
-For instance, if three drivers made 2 "Snack" deliveries each, and two drivers made 3 "Snack" deliveries each, `value_counts()` will return a series showing the count of drivers per number of deliveries (e.g., 3 drivers made 2 deliveries, 2 drivers made 3 deliveries).
+The first `.value_counts()` computes how many `"Snack"` deliveries each `"driver"` made. The second `.value_counts()` then counts how many drivers made each possible number of `"Snack"` deliveries.
 
-Lastly, the `.shape[0]` gets us the number of distinct values in the second `value_counts()` result, which tells us how many different numbers of "Snack" deliveries are represented in the data. In this case, we know that it evaluates to `1`, which means there is only one distinct number of deliveries made by drivers.
-
+Finally, `.shape[0]` measures how many distinct numbers of `"Snack"` deliveries were made by drivers. Since the expression evaluates to `1`, we can conclude that there is only one distinct number of `"Snack"` deliveries made by drivers. This implies that every driver either made exactly 0 or exactly $k$ `"Snack"` deliveries.
 
 # END SOLUTION
 
