--- a/problems/wn25-midterm/q04.md
+++ b/problems/wn25-midterm/q04.md
@@ -1,28 +1,25 @@
 # BEGIN PROB
 
-In one English sentence, describe what the following expression
-computes. Your sentence should start with "The driver\", and should be
-understandable by someone who has never written code before, i.e. it
-should not use any technical terms.
+In one English sentence, describe what the following expression computes. Your sentence should start with "The driver" and should be understandable by someone who has never written code before, i.e. it should not use any technical terms.
 
 ```python
-    (orders
-        .groupby("driver")
-        .filter(lambda df: df.shape[0] >= 10 and df["rating"].min() >= 4.5)
-        .groupby("driver")
-        ["minutes"]
-        .sum()
-        .idxmax()
-    )
+(orders
+    .groupby("Driver")
+    .filter(lambda df: df.shape[0] >= 10 and df["rating"].min() >= 4.5)
+    .groupby("Driver")
+    ["minutes"]
+    .sum()
+    .idxmax()
+)
 ```
 
 # BEGIN SOLUTION
-**Answer**  The driver who has driven the most minutes total, among all drivers with at least 10 deliveries and a minimum review of 4.5.
 
-The expression first groups the data by the driver column (`.groupby("driver")`). After which it filters out drivers who have made fewer than 10 deliveries or have a minimum rating below 4.5. Only drivers who meet both conditions (at least 10 deliveries and a minimum rating of 4.5) remain in the output df. After filtering, the expression groups the data by driver again and sums up the total minutes each driver has driven.
-Lastly, the `.idxmax()` finds the driver who has the maximum total minutes driven. This is the driver who drove the most minutes.
+**Answer**: The driver who has driven the most minutes total, among all `"Driver"`s with at least 10 deliveries and a minimum review rating of 4.5.
 
+The expression first groups the data by the `"Driver"` column. It then filters the groups to only include those where the `"Driver"` has made at least 10 deliveries and has a minimum `"rating"` of 4.5. Only `"Driver"`s who meet both conditions are kept in the output.
 
+After filtering, the data is grouped by `"Driver"` again, and the total number of `"minutes"` each `"Driver"` has driven is calculated. Finally, `.idxmax()` identifies the `"Driver"` who has driven the most `"minutes"` among all `"Driver"`s that fit the two criteria above.
 
 # END SOLUTION
 
