--- a/problems/wn25-midterm/q07.md
+++ b/problems/wn25-midterm/q07.md
@@ -49,15 +49,47 @@ buggy. **Select all issues** with the code above.
 [ ] None of the above.
 
 # BEGIN SOLUTION
-**Answer** 
+**Correct answers** 
 
-**`one_sim` draws `k` drivers with replacement, instead of without replacement** - Because `np.random.choice()` is called separately each time within the for loop, there is no guarantee that all k chosen drivers will be distinct across iterations. Which means that some drivers might be picked more than once, violating the "unique drivers" requirement.The correct way to choose the k drivers would be - 
+- `one_sim` draws `k` drivers with replacement, instead of without replacement
+- `simulation` only picks one value of `k`, when it should select a new `k` on each iteration
+
+
+**`one_sim` draws `k` drivers with replacement, instead of without replacement** 
+
+Because `np.random.choice()` is called separately each time within the for loop, there is no guarantee that all k chosen drivers will be distinct across iterations. Which means that some drivers might be picked more than once, violating the "unique drivers" requirement. The correct way to choose the k drivers would be - 
 ```python
 np.random.choice(drivers, k, replace=False)
 ```
 
 
-**`simulation` only picks one value of `k`, when it should select a new `k` on each iteration** - The code defines k once at the beginning of simulation() using `choose_k()`. This means that the same value of k is used for all iterations of the simulation. However, as per the problem statement, k should be chosen anew on each iteration of the simulation. Therefore, the function `choose_k()` should be called within the loop to select a random k for each iteration.
+**`simulation` only picks one value of `k`, when it should select a new `k` on each iteration** 
+
+The code defines k once at the beginning of simulation() using `choose_k()`. This means that the same value of k is used for all iterations of the simulation. However, as per the problem statement, k should be chosen anew on each iteration of the simulation. Therefore, the function `choose_k()` should be called within the loop to select a random k for each iteration.
+
+
+Now, for the other options:
+
+- **`drivers` only includes the drivers that made one delivery, rather than all drivers**
+
+    `orders["driver"].unique()` returns all unique drivers, regardless of how many deliveries they made, so this issue doesn't exist in the code.
+
+- **`choose_k` returns a random integer between `1` and `11`, instead of one from `1` to `10`**
+
+    `np.random.choice(np.arange(1, 11))` correctly selects a random integer from 1 to 10 (inclusive), so this is not an issue.
+
+- **`choose_k` always returns the same number**
+
+    `choose_k()` generates a random number between 1 and 10 every time it is called. Therefore, it does not always return the same number.
+
+- **`one_sim` always returns `False`, because `selected` is always an empty array**
+
+    The array `selected` is updated correctly inside the loop, and it will contain the selected drivers for the simulation, so it doesn't always return `False`.
+
+- **`one_sim` draws `k` drivers without replacement, instead of with replacement**
+
+    The issue is not about drawing without replacement; the issue is that the function draws with replacement within the for loop, which could result in the same driver being chosen more than once.
+
 
 # END SOLUTION
 
