--- a/problems/wn25-midterm/q05.md
+++ b/problems/wn25-midterm/q05.md
@@ -1,39 +1,35 @@
 # BEGIN PROB
 
 Consider the DataFrame `C`, defined below.
+
 ```python
-    C = orders.pivot_table(
-      index="type", # Possible values: "Buffet", "Drinks", "Meal", "Snacks"
-      columns="traffic", # Possible values: "High", "Low", "Moderate", "Very Low"
-      values="minutes",
-      aggfunc="count"
-    )
+C = orders.pivot_table(
+  index="type",  # Possible values: "Buffet", "Drinks", "Meal", "Snack"
+  columns="traffic",  # Possible values: "High", "Low", "Moderate", "Very Low"
+  values="minutes",
+  aggfunc="count"
+)
 ```
 
-Throughout this question, assume that after defining `C` above, **we
-sort `C` such that both its index and columns are in ascending
-alphabetical order** (as shown above).
+Throughout this question, assume that after defining `C` above, **we sort `C` such that both its index and columns are in ascending alphabetical order** (as shown above).
 
 # BEGIN SUBPROB
 
-Fill in the blanks so that the expression below evaluates to the
-**proportion of `"Snack"` deliveries that were made in `"Moderate"`
-traffic**. Each blank should be filled with a single integer, float,
-string, or Boolean value.
+Fill in the blanks so that the expression below evaluates to the **proportion of `"Snack"` deliveries that were made in `"Moderate"` traffic**. Each blank should be filled with a single integer, float, string, or Boolean value.
 
 ```python
-    C.iloc[__(i)__, __(ii)__] / C.loc[__(iii)__].sum()
+C.iloc[__(i)__, __(ii)__] / C.loc[__(iii)__].sum()
 ```
 
-
 # BEGIN SOLUTION
-**Answer**: There are multiple possible answers  
 
-- `(i)` `3 or -1` -  The index of C is sorted alphabetically, meaning the row order follows "Buffet", "Drinks", "Meal", "Snacks". Since "Snacks" is the last item in this order, its index is 3 (0-based) or -1 (negative indexing).
+**Answer**: There are multiple possible answers.
 
-- `(ii)` `2 or -2` -  Similarly, the columns are sorted alphabetically: "High", "Low", "Moderate", "Very Low". "Moderate" appears third in this order, making its index 2 (0-based) or -2 (negative indexing).
- 
-- `(iii)` `Snacks` - To get the total number of "Snacks" deliveries across all traffic levels, we use .loc["Snacks"]. The .sum() function then adds up all values in that row.
+- (i): `3 or -1`. The index of `C` is sorted alphabetically, meaning the row order follows `"Buffet"`, `"Drinks"`, `"Meal"`, `"Snack"`. Since `"Snack"` is the last item in this order, its index is 3 (0-based) or -1 (negative indexing).
+
+- (ii): `2 or -2`. Similarly, the columns are sorted alphabetically: `"High"`, `"Low"`, `"Moderate"`, `"Very Low"`. `"Moderate"` appears third in this order, making its index 2 (0-based) or -2 (negative indexing).
+
+- (iii): `"Snack"`. To get the total number of `"Snack"` deliveries across all traffic levels, we use `C.loc["Snack"]`. The `.sum()` function then adds up all values in that row.
 
 # END SOLUTION
 
@@ -41,31 +37,28 @@ string, or Boolean value.
 
 # BEGIN SUBPROB
 
-Fill in the blanks so that the expression below evaluates to the
-**proportion of deliveries made in `"Low"` traffic that were for
-`"Buffet"`s**. Blanks (i) and (ii) should each be filled with a single
-integer, float, string, or Boolean value.
+Fill in the blanks so that the expression below evaluates to the **proportion of deliveries made in `"Low"` traffic that were for `"Buffet"`**. Blanks (i) and (ii) should each be filled with a single integer, float, string, or Boolean value.
 
 ```python
-    C.loc[__(i)__, __(ii)__] / __(iii)__.sum()
+C.loc[__(i)__, __(ii)__] / __(iii)__.sum()
 ```
 
+Options for (iii):  
 
-(iii): 
-
-( ) `C.iloc[:, -1]`   
-( ) `C.iloc[:, 0]`   
-( ) `C.iloc[:, 1]`    
-( ) `C.iloc[-1, :]`        
-( ) `C.iloc[0, :]`      
-( ) `C.iloc[1, :]`
+( ) `C.iloc[:, -1]`  
+( ) `C.iloc[:, 0]`  
+( ) `C.iloc[:, 1]`  
+( ) `C.iloc[-1, :]`  
+( ) `C.iloc[0, :]`  
+( ) `C.iloc[1, :]`  
 
 # BEGIN SOLUTION
-- `(i)``Buffet` - when using  `.loc[]`, we reference labels instead of numerical indices. Since the index represents order `"type"` and is sorted alphabetically ("Buffet", "Drinks", "Meal", "Snacks"), "Buffet" is the correct label for selecting the row corresponding to buffet orders.
+**Answer**:
+- (i): `"Buffet"`. When using `.loc`, we reference labels instead of numerical indices. Since the index represents order `"type"` and is sorted alphabetically (`"Buffet"`, `"Drinks"`, `"Meal"`, `"Snack"`), `"Buffet"` is the correct label for selecting the row corresponding to buffet orders.
 
-- `(ii)` `Low` - similarly, the column order is sorted alphabetically as "High", "Low", "Moderate", "Very Low", making "Low" the correct column label to select deliveries in "Low" traffic.
+- (ii): `"Low"`. Similarly, the column order is sorted alphabetically as `"High"`, `"Low"`, `"Moderate"`, `"Very Low"`, making `"Low"` the correct column label to select deliveries in `"Low"` traffic.
 
-- `(iii)` `C.iloc[:, 1]` - Here, we are using `.iloc[]`, which is integer-location based indexing. The `[:, 1]` part means we are selecting all rows (:) in the second column (index 1), which corresponds to "Low" traffic, since the columns are sorted alphabetically as "High", "Low", "Moderate", "Very Low". By selecting `C.iloc[:, 1]`, we are referencing all the values in the "Low" column, and .sum() will give the total number of deliveries made in "Low" traffic, across all order types.
+- (iii): `C.iloc[:, 1]`. Here, we are using `.iloc`, which is integer-location based indexing. The `[:, 1]` part means we are selecting all rows (`:`) in the second column (index 1), which corresponds to `"Low"` traffic, since the columns are sorted alphabetically. By selecting `C.iloc[:, 1]`, we are referencing all the values in the `"Low"` column, and `.sum()` will give the total number of deliveries made in `"Low"` traffic across all order types.
 
 # END SOLUTION
 
