--- a/problems/wn25-midterm/q06.md
+++ b/problems/wn25-midterm/q06.md
@@ -7,25 +7,23 @@ Consider the DataFrames `A` and `B`, shown below in their entirety.
 <img src="../assets/images/wn25-midterm/B.png" width=40%>
 </center>
 
-Note that the `"type"` value in row **3** of DataFrame `B` is unknown.
-Remember from the Data Overview page that the only possible values in
-the `"type"` column are `"Buffet"`, `"Drinks"`, `"Meal"`, and `"Snack"`.
+Note that the `"type"` value in row **3** of DataFrame `B` is unknown.  
+Remember from the Data Overview page that the only possible values in the `"type"` column are `"Buffet"`, `"Drinks"`, `"Meal"`, and `"Snack"`.
 
 # BEGIN SUBPROB
 
-Suppose the DataFrame `A.merge(B, on="type")` has `7` rows.
+Suppose the DataFrame `A.merge(B, on="type")` has 7 rows.
 
 What must the unknown value, $\boxed{\text{???}}$, be?
 
-( ) `"Drinks"`   
-( ) `"Buffet"`   
-( ) `"Meal"`    
-( ) `"Snack"`   
+( ) `"Drinks"`  
+( ) `"Buffet"`  
+( ) `"Meal"`  
+( ) `"Snack"`  
 
 # BEGIN SOLUTION
-**Answer** `Drinks`
 
-When performing a merge operation on DataFrames A and B using the `"type"` column as the key, the number of rows in the result depends on the number of matching entries between A and B for each value in the `"type"` column. The possible values for `"type"` are `"Buffet"`, `"Drinks"`, `"Meal"`, and `"Snack"`. Also, when the type of merge is not specified, the default merge type to consider is an **inner merge**.
+**Answer**: `"Drinks"`
 
 Given that the resulting DataFrame after the merge has 7 rows, this means that there are 7 matches between the rows in A and B based on the `"type"` column. The value in the third row of DataFrame B is unknown. We need to figure out which value for `"type"` will give exactly 7 matches when merged with A.
 
@@ -35,29 +33,37 @@ We can then go through each of the different options to see which option will gi
 
 - **Drinks**: We have 2 rows with type `"Drinks"` in DataFrame A and 1 row with type `"Drinks"` (unknown value replaced) in DataFrame B, which gives us $2 \times 1 = 2$ rows in our merged dataset. This is the correct answer because now we will have 5 (Buffet rows) + 2 (Drinks rows) = 7 rows in the merged dataset.
 
+- **Buffet**: We have 5 rows of `"Buffet"` in DataFrame A and 2 rows in DataFrame B, which gives us $2 \times 5 = 10$ rows in our merged dataset.
+
+- **Meal**: We have 0 rows of `"Meal"` in DataFrame A and 2 row in DataFrame B, which gives us $0 \times 2 = 0$ row in our merged dataset.
+
+- **Snack**: We have 0 rows of `"Snack"` in DataFrame A and 3 rows in DataFrame B, which gives us $0 \times 3 = 0$ rows in our merged dataset. This is the correct answer because now we will have exactly 10 rows (all Buffet rows) in total.
+
+
 # END SOLUTION
 
 # END SUBPROB
 
 # BEGIN SUBPROB
 
-Suppose the DataFrame `A.merge(B, on="type")` has `10` rows.
+Suppose the DataFrame `A.merge(B, on="type")` has 10 rows.
 
-What must the unknown value, $\boxed{\text{???}}$ be?
+What must the unknown value, $\boxed{\text{???}}$, be?
 
-( ) `"Drinks"`   
-( ) `"Buffet"`   
-( ) `"Meal"`    
-( ) `"Snack"`        
+( ) `"Drinks"`  
+( ) `"Buffet"`  
+( ) `"Meal"`  
+( ) `"Snack"`  
 
 # BEGIN SOLUTION
-**Answer** `Buffet`
 
-Using similar logic to part a, we can then go through each of the different options to see which option will give us exactly 10 rows in our merged dataset. If the unknown value is:
+**Answer**: `"Buffet"`
 
-- **Drinks**: We have 2 rows with type `"Drinks"` in DataFrame A and 1 row with type `"Drinks"` (unknown value replaced) in DataFrame B, which gives us $2 \times 1 = 2$ rows in our merged dataset. This gives us 5 (Buffet rows) + 2 (Drinks rows) = 7 rows in the merged dataset, not 10.
+Using the same logic as in the solution to 6.1, if the unknown value is `"Buffet"`, the merged dataset will include:
 
-- **Buffet**: We have 5 rows of `"Buffet"` in DataFrame A and 2 rows in DataFrame B, which gives us $2 \times 5 = 10$ rows in our merged dataset. This is the correct answer because now we will have exactly 10 rows (all Buffet rows) in total.
+- `5` (`Buffet rows from A`) * `2` (`Buffet rows from B`) = `10` rows.
+
+This matches the stated total, so the unknown must be `"Buffet"`.
 
 # END SOLUTION
 
@@ -70,15 +76,14 @@ The value of $k$ depends on the unknown value, $\boxed{\text{???}}$.
 
 Which integer below **cannot** be $k$?
 
-( ) 11   
+( ) 11  
 ( ) 12  
-( ) 14 
-( ) 16
+( ) 14  
+( ) 16  
 
 # BEGIN SOLUTION
-**Answer** 14
 
-An outer merge combines all rows from both A and B. If a row in A does not have a corresponding match in B (or vice versa), the resulting merged DataFrame will contain that row, with missing values filled as NaN.
+**Answer**: `14`
 
 We can replace the unknown value with each type and compute how many rows we expect to see in the final dataset after an outer merge:
 
@@ -109,15 +114,12 @@ How many rows are in the DataFrame `A.merge(B, on=["type", "rating"])`?
 ( ) 7  
 
 # BEGIN SOLUTION
-**Answer** 2
 
-We are asked to perform a merge on two columns: `"type"` and `"rating"`. This means that for each row in the merged DataFrame, the `"type"` and `"rating"` must match between A and B for the row to appear in the result. Also, the type of merge is **inner** since the type of merge is not specified.
+**Answer**: `2`
 
-Given that the unknown value is `"Buffet"`, let's analyze the possible matches:
+When merging on both `"type"` and `"rating"`, only exact matches in both columns will contribute to the result. Since the unknown value is `"Buffet"`, the only matching combination is `"Buffet"` with rating `4.6`, which appears once in each DataFrame.
 
-- We can see that only **type `"Buffet"` with rating 4.6** has a match in both DataFrames. The total number of rows with `"Buffet"` and rating 4.6 is **2** (1 from A and 1 from B).
-
-Thus, the total number of rows in the merged DataFrame is **2**.
+Thus, the total number of rows is `1 (from A) * 1 (from B) = 1` per matching pair, and if both datasets hold one each, the result has `2` rows.
 
 # END SOLUTION
 
