--- a/problems/wn25-midterm/q08.md
+++ b/problems/wn25-midterm/q08.md
@@ -18,7 +18,7 @@ first part is done for you.
     t = lambda x: x.fillna(x.mean())
     D["minutes"] = t(D["minutes"])
 ```
-- `D.shape[0]`
+**Answer** `D.shape[0]`
 
 # BEGIN SOLUTION
 `D.shape[0]` is guaranteed to evaluate to the same value before and after the imputation code is run because it represents the total number of rows in the DataFrame, which is unaffected by filling in missing values. The imputation modifies the "minutes" column but does not alter the number of rows.
@@ -28,68 +28,66 @@ first part is done for you.
 
 # BEGIN SUBPROB
 ```python
-    t = lambda x: x.fillna(x.mean())
-    D["minutes"] = t(D["minutes"])
+ t = lambda x: x.fillna(x.mean())
+ D["minutes"] = t(D["minutes"])
 ```
-
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 [ ] `D.groupby("traffic")["minutes"].mean()`
 [ ] None of the above.
+**# BEGIN SOLUTION**
+**Answer**: `D["minutes"].mean()`, `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 
-# BEGIN SOLUTION
-**Answer** 
-In this imputation code we are performing mean imputation by filling the missing values with the mean of the whole dataset
+In this imputation code we are performing mean imputation by filling the missing values with the mean of the whole dataset.
 
-`D["minutes"].mean()` - This expression will remain the same before and after the imputation because we are filling the missing values in "minutes" with the mean of the column. Thus, the overall mean of the column will remain unchanged.
+`D["minutes"].mean()` - As we've seen in class, replacing missing values with the mean of the observed values does not change the mean.
 
 `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since the imputation does not affect the rows where "traffic" is "Moderate" (i.e., these rows already have no missing values), the mean for this subset of the data will remain unchanged as well.
 
-# END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SUBPROB
-
-    t = lambda x: x.fillna(x.mean())
-    D["minutes"] = D.groupby("traffic")["minutes"].transform(t)
-
+`D.groupby("traffic")["minutes"].mean()` - This expression will change after imputation. The grouped means for traffic categories that had missing values will be affected by the imputation, as we're replacing missing values with the overall mean rather than group-specific means.
+**# END SOLUTION**
+**# END SUBPROB**
+**# BEGIN SUBPROB**
+```python
+ t = lambda x: x.fillna(x.mean())
+ D["minutes"] = D.groupby("traffic")["minutes"].transform(t)
+```
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 [ ] `D.groupby("traffic")["minutes"].mean()`
 [ ] None of the above.
+**# BEGIN SOLUTION**
+**Answer**: `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`, `D.groupby("traffic")["minutes"].mean()`
 
-# BEGIN SOLUTION
-**Answer** 
 In this imputation code we are performing conditional mean imputation by filling the missing values with the minutes of each group of traffic.
+
+`D["minutes"].mean()` - This expression will change after imputation. When we fill missing values with group-specific means, the overall mean can change.
 
 `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since the imputation only fills in missing values for the "minutes" column based on the mean of the "minutes" values within each traffic group, the mean for "Moderate" traffic will remain unchanged.
 
 `D.groupby("traffic")["minutes"].mean()` - The imputation groups by the "traffic" column and fills missing values using the mean of "minutes" within each group. Since "Moderate" traffic already had no missing values, the mean for this group will not be affected, and neither will the means for other groups, assuming the missing values are only filled within their respective groups.
-
-# END SOLUTION
-
-# END SUBPROB
-
-# BEGIN SUBPROB
-
-    present = D.loc[D["minutes"].notna(), "minutes"]
-    n = D["minutes"].isna().sum()
-    D.loc[D["minutes"].isna(), "minutes"] = np.random.choice(present, n)
-
+**# END SOLUTION**
+**# END SUBPROB**
+**# BEGIN SUBPROB**
+```python
+ present = D.loc[D["minutes"].notna(), "minutes"]
+ n = D["minutes"].isna().sum()
+ D.loc[D["minutes"].isna(), "minutes"] = np.random.choice(present, n)
+```
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 [ ] `D.groupby("traffic")["minutes"].mean()`
 [ ] None of the above.
+**# BEGIN SOLUTION**
+**Answer**: `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 
-# BEGIN SOLUTION
-**Answer**
-In this imputation code we are performing unconditional probabalistic imputation by filling the missing values by randomly sampling from the present values in the "minutes" column
+In this imputation code we are performing unconditional probabilistic imputation by filling the missing values by randomly sampling from the present values in the "minutes" column.
 
- `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since "Moderate" traffic rows have no missing values, the imputation does not affect them. Therefore, the mean for this subset of data will remain unchanged.
+`D["minutes"].mean()` - This expression will likely change after imputation, as we're replacing missing values with randomly selected observed values.
 
-# END SOLUTION
+`D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since "Moderate" traffic rows have no missing values, the imputation does not affect them. Therefore, the mean for this subset of data will remain unchanged.
 
-# END SUBPROB
-
-# END PROB
+`D.groupby("traffic")["minutes"].mean()` - The means for traffic categories that had missing values will likely change after imputation, as we're filling in those missing values with randomly selected values from the entire dataset rather than values specific to each traffic category.
+**# END SOLUTION**
+**# END SUBPROB**
+**# END PROB**
