finished edits for wn25-midterm

--- a/problems/wn25-midterm/q08.md
+++ b/problems/wn25-midterm/q08.md
@@ -14,6 +14,7 @@ the **same** value, **before and after** the imputation code is run. The
 first part is done for you.
 
 # BEGIN SUBPROB
+
 ```python
     t = lambda x: x.fillna(x.mean())
     D["minutes"] = t(D["minutes"])
@@ -21,21 +22,27 @@ first part is done for you.
 **Answer** `D.shape[0]`
 
 # BEGIN SOLUTION
+
 `D.shape[0]` is guaranteed to evaluate to the same value before and after the imputation code is run because it represents the total number of rows in the DataFrame, which is unaffected by filling in missing values. The imputation modifies the "minutes" column but does not alter the number of rows.
+
 # END SOLUTION
 
 # END SUBPROB
 
 # BEGIN SUBPROB
+
 ```python
  t = lambda x: x.fillna(x.mean())
  D["minutes"] = t(D["minutes"])
 ```
+
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 [ ] `D.groupby("traffic")["minutes"].mean()`
 [ ] None of the above.
-**# BEGIN SOLUTION**
+
+# BEGIN SOLUTION
+
 **Answer**: `D["minutes"].mean()`, `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 
 In this imputation code we are performing mean imputation by filling the missing values with the mean of the whole dataset.
@@ -45,18 +52,25 @@ In this imputation code we are performing mean imputation by filling the missing
 `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since the imputation does not affect the rows where "traffic" is "Moderate" (i.e., these rows already have no missing values), the mean for this subset of the data will remain unchanged as well.
 
 `D.groupby("traffic")["minutes"].mean()` - This expression will change after imputation. The grouped means for traffic categories that had missing values will be affected by the imputation, as we're replacing missing values with the overall mean rather than group-specific means.
-**# END SOLUTION**
-**# END SUBPROB**
-**# BEGIN SUBPROB**
+
+# END SOLUTION
+
+# END SUBPROB
+
+# BEGIN SUBPROB
+
 ```python
  t = lambda x: x.fillna(x.mean())
  D["minutes"] = D.groupby("traffic")["minutes"].transform(t)
 ```
+
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 [ ] `D.groupby("traffic")["minutes"].mean()`
 [ ] None of the above.
-**# BEGIN SOLUTION**
+
+# BEGIN SOLUTION
+
 **Answer**: `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`, `D.groupby("traffic")["minutes"].mean()`
 
 In this imputation code we are performing conditional mean imputation by filling the missing values with the minutes of each group of traffic.
@@ -66,19 +80,26 @@ In this imputation code we are performing conditional mean imputation by filling
 `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since the imputation only fills in missing values for the "minutes" column based on the mean of the "minutes" values within each traffic group, the mean for "Moderate" traffic will remain unchanged.
 
 `D.groupby("traffic")["minutes"].mean()` - The imputation groups by the "traffic" column and fills missing values using the mean of "minutes" within each group. Since "Moderate" traffic already had no missing values, the mean for this group will not be affected, and neither will the means for other groups, assuming the missing values are only filled within their respective groups.
-**# END SOLUTION**
-**# END SUBPROB**
-**# BEGIN SUBPROB**
+
+# END SOLUTION
+
+# END SUBPROB
+
+# BEGIN SUBPROB
+
 ```python
  present = D.loc[D["minutes"].notna(), "minutes"]
  n = D["minutes"].isna().sum()
  D.loc[D["minutes"].isna(), "minutes"] = np.random.choice(present, n)
 ```
+
 [ ] `D["minutes"].mean()`
 [ ] `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 [ ] `D.groupby("traffic")["minutes"].mean()`
 [ ] None of the above.
-**# BEGIN SOLUTION**
+
+# BEGIN SOLUTION
+
 **Answer**: `D.loc[D["traffic"] == "Moderate", "minutes"].mean()`
 
 In this imputation code we are performing unconditional probabilistic imputation by filling the missing values by randomly sampling from the present values in the "minutes" column.
@@ -88,6 +109,9 @@ In this imputation code we are performing unconditional probabilistic imputation
 `D.loc[D["traffic"] == "Moderate", "minutes"].mean()` - Since "Moderate" traffic rows have no missing values, the imputation does not affect them. Therefore, the mean for this subset of data will remain unchanged.
 
 `D.groupby("traffic")["minutes"].mean()` - The means for traffic categories that had missing values will likely change after imputation, as we're filling in those missing values with randomly selected values from the entire dataset rather than values specific to each traffic category.
-**# END SOLUTION**
-**# END SUBPROB**
-**# END PROB**
+
+# END SOLUTION
+
+# END SUBPROB
+
+# END PROB
