--- a/problems/wn25-midterm/q10.md
+++ b/problems/wn25-midterm/q10.md
@@ -31,9 +31,15 @@ what is the value of $k$?
 # BEGIN SOLUTION
 **Answer** 5
 
-The vector for Document 1 is:  $\vec{d_1} = (1, 1, k, 0, 0)$ 
+The bag of words vector for Document 1 is:  $$\begin{bmatrix} 1 \\ 1 \\ k \\ 0 \\ 0 \end{bmatrix}$$
+ 
 
-The vector for Document 2 is: $\vec{d_2} = (0, 0, 1, 1, 1)$
+The bag of words vector for Document 2 is:$$\begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \\ 1 \end{bmatrix}$$
+
+The cosine similarity can be calculated using the formula:
+$$
+\text{cosine sim}(\vec d_1, \vec d_2) = \frac{\vec d_1 \cdot \vec d_2}{\lVert d_1 \rVert \lVert d_2 \rVert}
+$$
 
 For the two vectors $\vec{d_1} = (1, 1, k, 0, 0)$ and  $\vec{d_2} = (0, 0, 1, 1, 1)$, the dot product is:
 $$
@@ -49,12 +55,6 @@ $$
 \|\vec{d_2}\| = \sqrt{0^2 + 0^2 + 1^2 + 1^2 + 1^2} = \sqrt{3}
 $$
 
-
-Now we can calculate the cosine similarity using the formula:
-$$
-\text{Cosine similarity} = \frac{\text{Dot product}}{\|\vec{d_1}\| \cdot \|\vec{d_2}\|}
-$$
-
 Substitute the values we calculated:
 $$
 \text{Cosine similarity} = \frac{k}{\sqrt{2 + k^2} \cdot \sqrt{3}}
@@ -65,7 +65,7 @@ $$
 \frac{k}{\sqrt{2 + k^2} \cdot \sqrt{3}} = \frac{5}{9}
 $$
 
-Solving for k gives us 5.
+Solving for `k` gives us 5.
 
 
 
@@ -77,27 +77,28 @@ Solving for k gives us 5.
 
 In this part, assume we are using a base-2 logarithm.
 
-(i) Which term in **document 1** has the largest TF-IDF? If there are ties select them all
+(i) Which term in **document 1** has the largest TF-IDF? If there are ties, select them all.
 
-( ) `butter` 
-( ) `chicken`
-( ) `naan`
-( ) `curry`
-( ) `with`
+[ ] butter
+[ ] chicken
+[ ] naan
+[ ] curry
+[ ] with
 
+(ii) Which term in **document 2** has the largest TF-IDF? If there are ties, select them all.
 
-(i) Which term in **document 2** has the largest TF-IDF? If there are ties select them all
-
-( ) `butter` 
-( ) `chicken`
-( ) `naan`
-( ) `curry`
-( ) `with`
+[ ] butter
+[ ] chicken
+[ ] naan
+[ ] curry
+[ ] with
 
 # BEGIN SOLUTION
 **Answer**
-- `(i)` `butter` and `chicken`
-- `(i)` `curry` and `with`
+
+- butter and chicken
+
+- curry and with
 
 
 The TF-IDF score of a term in a document is given by:
@@ -106,27 +107,19 @@ $$
                     = \frac{\# \text{ of occurrences of } t \text{ in } d }{\text{total } \# \text{ of terms in } d} \cdot \log_2\left(\frac{\text{total } \# \text{ of documents}}{\# \text{ of documents in which } t \text{ appears}}\right)
 $$
 
-**Document 1**:
+TF-IDF scores are high when:
 
-- `butter`: Appears 1 time in the document, so the TF is $\frac{1}{k+2}$.
-- `chicken`: Appears 1 time in the document, so the TF is $\frac{1}{k+2}$.
-- `naan`: Appears $k$ times, so the TF is $\frac{k}{k+2}$.
-- `curry`: Appears 1 time, so the TF is $\frac{1}{k+2}$.
-- `with`: Appears 1 time, so the TF is $\frac{1}{k+2}$.
+1. A term occurs frequently in the document (high TF), and
 
-**Document 2**:
+2. A term appears in few documents in the corpus (high IDF).
 
-- `curry`: Appears 1 time in the document, so the TF is $\frac{1}{3}$.
-- `with`: Appears 1 time, so the TF is $\frac{1}{3}$.
-- `naan`: Appears 1 time, so the TF is $\frac{1}{3}$.
+**Naan** appears in both documents, so its IDF is 0 and its TF-IDF is 0 in both.
 
-The IDF for terms is computed based on their presence across both documents:
+**Butter** and **chicken** each appear only once, and only in document 1. So their TF is low, but their IDF is high.
 
-- For terms like `butter`, `chicken`, and `naan` in document 1, the IDF will be based on their presence across both documents.
-- For terms like `curry` and `with` in document 2, they will have a higher IDF.
+**Curry** and **with** each appear only once, and only in document 2. So they also have high IDF and non-zero TF.
 
-The terms `butter`, `chicken` in document 1 and `curry`, `with` in document 2 have the largest TF-IDF scores, respectively, due to their unique occurrences in each document.
-
+Therefore, **butter** and **chicken** have the highest TF-IDF in document 1, and **curry** and **with** in document 2.
 
 # END SOLUTION
 
@@ -164,9 +157,19 @@ What goes in the blank?
 # BEGIN SOLUTION
 **Answer** $\text{WS}(t, d) < 1$
 
-The **Wolverine Score (WS)** compares the occurrence of a term $t$ within a document $d$ relative to its occurrence across the entire corpus. If the value of WS for a term is less than 1, it indicates that the term $t$ is more common in document $d$ than it is in the overall corpus. This implies that the term is likely an important term for document $d$.
+The Wolverine Score compares a term’s relative frequency in document $d$ versus its average frequency in the entire corpus.
 
-The WS formula suggests that if the term $t$ occurs more frequently in document $d$ relative to its occurrence in the entire corpus, the WS score will be less than 1, making $t$ a significant term for document $d$.
+The first part of WS, $\frac{\text{total terms in } d}{\# \text{ of occurrences of } t \text{ in } d}$, is the inverse of how frequent $t$ is in $d$.
+
+The second part, $\frac{\text{total occurrences of } t \text{ in corpus}}{\text{total terms in corpus}}$, is the overall frequency of $t$.
+
+If WS is less than 1, it means that the term occurs more often *within* $d$ than *on average* across all documents. This implies that the term is especially important or relevant to $d$.
+
+Example: If a term appears 5 times in a 10-word document (50%), but only 10 times in a 100-word corpus (10%), then:
+$$
+\text{WS} = \left(\frac{10}{5}\right) \cdot \left(\frac{10}{100}\right) = 2 \cdot 0.1 = 0.2 < 1
+$$
+So WS < 1 means the term is concentrated in $d$.
 
 # END SOLUTION
 
