--- a/problems/wn25-midterm/q12.md
+++ b/problems/wn25-midterm/q12.md
@@ -38,23 +38,34 @@ middle two decimals.
         return __(ii)__
 
 # BEGIN SOLUTION
-**Answer**
+**Answer** 
 
-- `(i)` `(\d+)\.(\d{3})`
+- `(\d+)\.(\d{3})`
 
-    - `(\d+)`: This part matches one or more digits before the first decimal point. The parentheses around \d+ capture this part into a group, allowing us to extract the digits before the first decimal.
-    -  `\.`: This matches the literal decimal point. The backslash \ is necessary because the dot . is a special character in regular expressions that usually matches any character, so we need to escape it with a backslash to match an actual period.
-    - `(\d{3})`: This matches exactly three digits after the first decimal and before the second decimal. The parentheses around \d{3} capture these digits into another group, allowing us to extract them separately.
-
-
-
-- `(ii)` ```python int(p[0] + p[1]) / 100 
+- ```python 
+int(p[0] + p[1]) / 100 
 ```
 
-    p is a tuple returned by the split_pieces(s) function, where p[0] is the first part (before the first decimal point) and p[1] is the part between the two decimals.
+\
 
-    For example, if the input string is "8.334.108", p would be ("8", "334").
-    The expression ```python p[0] + p[1] ``` concatenates these two parts together, creating the string "83334". This represents the combined value of the minutes, but it's not in the correct format. We can wrap this around the int function which will convert the concatenated string "83334" into an integer.
+`(\d+)\.(\d{3})`
+
+`(\d+)`: This part matches one or more digits before the first decimal point. The parentheses around \d+ capture this part into a group, allowing us to extract the digits before the first decimal.
+
+`\.`: This matches the literal decimal point. The backslash \ is necessary because the dot . is a special character in regular expressions that usually matches any character, so we need to escape it with a backslash to match an actual period.
+    
+`(\d{3})`: This matches exactly three digits after the first decimal and before the second decimal. The parentheses around \d{3} capture these digits into another group, allowing us to extract them separately.
+
+\
+
+```python 
+int(p[0] + p[1]) / 100 
+```
+
+p is a tuple returned by the split_pieces(s) function, where p[0] is the first part (before the first decimal point) and p[1] is the part between the two decimals.
+
+For example, if the input string is "8.334.108", p would be ("8", "334").
+The expression ```python p[0] + p[1] ``` concatenates these two parts together, creating the string "83334". This represents the combined value of the minutes, but it's not in the correct format. We can wrap this around the int function which will convert the concatenated string "83334" into an integer.
 
    
 # END SOLUTION
