--- a/problems/wn25-midterm/q14.md
+++ b/problems/wn25-midterm/q14.md
@@ -32,14 +32,16 @@ $$\displaystyle \sum_{i = 1}^n (y_i - G(x_i))^2 \:\:\: \boxed{???} \:\:\: \sum_{
 ( ) Impossible to tell
 
 # BEGIN SOLUTION
-**Answer** `>`
+**Answer** >
 
-The function $F(x)$ is the line that minimizes mean squared error (MSE), while $G(x)$ is the line that minimizes mean absolute error (MAE).  
+The quantity $\frac{1}{n} \sum_{i = 1}^n (y_i - F(x_i))^2$ 
+is the **mean squared error** (MSE) of model $F$. By definition, $F$ is the line that minimizes MSE over all possible linear models.
 
-The sum of squared errors (SSE) is the total squared difference between actual and predicted values, which is closely tied to MSE. Since $F$ is specifically chosen to minimize MSE, its SSE must be strictly smaller than that of any other line, including $G$.  
+The quantity  $\frac{1}{n} \sum_{i = 1}^n (y_i - G(x_i))^2$
+is the mean squared error of model $G$, which is not optimized for MSE but rather for **mean absolute error** (MAE).
 
-Thus, the sum of squared errors for $G$ is greater than the sum of squared errors for $F$, making the correct answer:  
-$$ \sum_{i = 1}^{n} (y_i - G(x_i))^2 > \sum_{i = 1}^{n} (y_i - F(x_i))^2 $$  
+Since $F$ is specifically constructed to minimize the squared error, and $G$ is not, we must have:  
+$$ \sum_{i = 1}^{n} (y_i - G(x_i))^2 > \sum_{i = 1}^{n} (y_i - F(x_i))^2 $$
 
 
 # END SOLUTION
@@ -59,15 +61,17 @@ $$\displaystyle \left( \sum_{i = 1}^n \big| y_i - G(x_i) \big| \right)^2 \:\:\: 
 ( ) Impossible to tell
 
 # BEGIN SOLUTION
-**Answer** `<`
+**Answer** <
 
-The function $G(x)$ is the line that minimizes mean absolute error (MAE), meaning it has the smallest sum of absolute errors (SAE), which is given by:  
-$$ \sum_{i=1}^{n} | y_i - G(x_i) | $$  
+The quantity $\frac{1}{n} \sum_{i = 1}^n | y_i - G(x_i) |$  is the **mean absolute error** (MAE) of model $G$. By definition, $G$ is the line that minimizes MAE over all possible linear models.
 
-Since $G$ minimizes MAE, its SAE must be smaller than the SAE of any other line, including $F$.  
+The quantity $\frac{1}{n} \sum_{i = 1}^n | y_i - F(x_i) |$ is the mean absolute error of model $F$, which is not optimized for MAE but rather for **mean squared error** (MSE).
 
-Now, note that the expression given in the problem **squares the entire SAE**. Since $G$ has the smallest SAE, its squared SAE will also be smaller than that of $F$:  
-$$ \left( \sum_{i = 1}^{n} | y_i - G(x_i) | \right)^2 < \left( \sum_{i = 1}^{n} | y_i - F(x_i) | \right)^2 $$  
+Since $G$ is specifically constructed to minimize the absolute error, and $F$ is not, we must have:  
+$$ \sum_{i = 1}^{n} | y_i - G(x_i) | < \sum_{i = 1}^{n} | y_i - F(x_i) | $$
+
+Squaring both sides preserves the inequality (since both sides are non-negative), so:  
+$$ \left( \sum_{i = 1}^{n} | y_i - G(x_i) | \right)^2 < \left( \sum_{i = 1}^{n} | y_i - F(x_i) | \right)^2 $$
 
 # END SOLUTION
 
@@ -87,7 +91,7 @@ Which line corresponds to line **$F$**?
 ( ) Line 2
 
 # BEGIN SOLUTION
-**Answer** `Line 1`
+**Answer** Line 1
 
 The key idea is that models trained with squared loss (MSE) are more sensitive to outliers than models trained with absolute loss (MAE).  
 
