--- a/problems/wn25-midterm/q11.md
+++ b/problems/wn25-midterm/q11.md
@@ -41,21 +41,43 @@ calories.
 # BEGIN SOLUTION
 **Answer** 
 
-- `(i)`  ```python soup.find_all("div", class_="menu-item") or soup.find_all("div", attrs={"class": "menu-item"}). 
+- ```python 
+soup.find_all("div", class_="menu-item") or soup.find_all("div", attrs={"class": "menu-item"}). 
+```
+
+- ```python
+float(x.get("data-calories")) < 500
+```
+
+- ```python 
+x.find("h2").text 
+```
+
+
+
+
+```python 
+soup.find_all("div", class_="menu-item") or soup.find_all("div", attrs={"class": "menu-item"}). 
 ```
 
 We want to extract all the menu items from the HTML. Each menu item is contained within a div tag with the class menu-item. So, we need to find all the div elements that have this class.
 In BeautifulSoup, we can do this with the `find_all()` method, which searches the document for all elements matching a specific condition.
 
-- `(ii)` 
-```python float(x.get("data-calories")) < 500 
+
+
+
+```python 
+float(x.get("data-calories")) < 500 
 ```
 
 This code is used to check whether the number of calories in each menu item is less than 500. We first use 
 `x.get("data-calories")` to retrieve the calorie count as a string. We then convert that string to a floating-point number using float() so we can compare it with 500. If the calorie count is less than 500, we extract the name of the menu item from the `<h2>` tag and add it to the low_cals list.
 
-- `(iii)` 
-```python x.find("h2").text
+
+
+
+```python 
+x.find("h2").text
 ```
 
 Lastly, we want to extract the name of the menu item from each selected div element. The find("h2") method is called on x. `.find` searches for the first occurrence of a `<h2>` tag within the x element. Once we have the `<h2>` element (in this case, `Chana Masala`), we use .text to extract the text content inside the `<h2>` tag.
