--- a/problems/wn25-midterm/q15.md
+++ b/problems/wn25-midterm/q15.md
@@ -1,11 +1,13 @@
 # BEGIN PROB
 
+**Optional**
+
 In Question 7, assuming that there are 100 unique drivers, what is the
 true, theoretical probability that `"WOLVAA01"` wins a free gift card?
 Show your work, and your final answer, which should be a **fraction**.
 
 Don't spend time on this question if you haven't attempted all other
-questions, as it is purely for (very little) extra credit.
+questions, as it is purely for (very little) `extra credit`.
 
 # BEGIN SOLUTION
 **Answer** $\frac{55}{100}$
