minor formatting change

--- a/problems/wn25-midterm/q02.md
+++ b/problems/wn25-midterm/q02.md
@@ -26,7 +26,7 @@ corresponding to the **proportion of drivers** who are consistent.
 
 # BEGIN SOLUTION
 
-**Answer**
+**Answer**:
 
 - (i): `"Driver"`. We use `groupby("Driver")` because we want to check the consistency of ratings for **each individual driver**. By grouping by `"Driver"`, we are able to look at each driver's set of ratings across their deliveries.
 
