--- a/problems/wn25-midterm/q07.md
+++ b/problems/wn25-midterm/q07.md
@@ -49,7 +49,7 @@ buggy. **Select all issues** with the code above.
 [ ] None of the above.
 
 # BEGIN SOLUTION
-**Correct answers** 
+**Correct answers**:
 
 - `one_sim` draws `k` drivers with replacement, instead of without replacement
 - `simulation` only picks one value of `k`, when it should select a new `k` on each iteration
