--- a/problems/wn25-midterm/q08.md
+++ b/problems/wn25-midterm/q08.md
@@ -19,7 +19,7 @@ first part is done for you.
     t = lambda x: x.fillna(x.mean())
     D["minutes"] = t(D["minutes"])
 ```
-**Answer** `D.shape[0]`
+**Answer**: `D.shape[0]`
 
 # BEGIN SOLUTION
 
