--- a/problems/wn25-midterm/q10.md
+++ b/problems/wn25-midterm/q10.md
@@ -29,7 +29,7 @@ what is the value of $k$?
 ( ) 10
 
 # BEGIN SOLUTION
-**Answer** 5
+**Answer**: 5
 
 The bag of words vector for Document 1 is:  $$\begin{bmatrix} 1 \\ 1 \\ k \\ 0 \\ 0 \end{bmatrix}$$
  
@@ -94,7 +94,7 @@ In this part, assume we are using a base-2 logarithm.
 [ ] with
 
 # BEGIN SOLUTION
-**Answer**
+**Answer**:
 
 - butter and chicken
 
@@ -155,7 +155,7 @@ What goes in the blank?
 ( ) $\text{WS}(t, d) > \frac{1}{n}$, where $n$ is the number of documents in the corpus
 
 # BEGIN SOLUTION
-**Answer** $\text{WS}(t, d) < 1$
+**Answer**: $\text{WS}(t, d) < 1$
 
 The Wolverine Score compares a term’s relative frequency in document $d$ versus its average frequency in the entire corpus.
 
