--- a/problems/wn25-midterm/q11.md
+++ b/problems/wn25-midterm/q11.md
@@ -39,7 +39,7 @@ calories.
 ```
 
 # BEGIN SOLUTION
-**Answer** 
+**Answer**:
 
 - ```python 
 soup.find_all("div", class_="menu-item") or soup.find_all("div", attrs={"class": "menu-item"}). 
