--- a/problems/wn25-midterm/q13.md
+++ b/problems/wn25-midterm/q13.md
@@ -29,7 +29,7 @@ $\alpha \beta$-balanced loss?
 ( ) $6 \bar{y}$
 
 # BEGIN SOLUTION
-**Answer** $\bar{y}$
+**Answer**: $\bar{y}$
 
 To find the optimal parameter, we have to minimize the average loss function. The loss function is given as: $L_{\alpha \beta}(y_i, h) = (3y_i - 3h)^2$
 
@@ -102,7 +102,7 @@ $\alpha \beta$-balanced loss?
 ( ) $6 \bar{y}$
 
 # BEGIN SOLUTION
-**Answer** $2 \bar{y}$ 
+**Answer**: $2 \bar{y}$ 
 
 To find the optimal parameter, we have to minimize the average loss function. The loss function is given as:  
 $$L_{\alpha \beta}(y_i, h) = (6y_i - 3h)^2$$  
@@ -169,7 +169,7 @@ $\alpha$, $\beta$, and/or other constants.
 
 
 # BEGIN SOLUTION
-**Answer** $\frac{\alpha}{\beta} \bar{y}$
+**Answer**: $\frac{\alpha}{\beta} \bar{y}$
 
 To find the optimal parameter, we have to minimize the average loss function. The loss function is given as:  
 $$L_{\alpha \beta}(y_i, h) = (\alpha y_i - \beta h)^2$$  
