--- a/problems/wn25-midterm/q14.md
+++ b/problems/wn25-midterm/q14.md
@@ -32,7 +32,7 @@ $$\displaystyle \sum_{i = 1}^n (y_i - G(x_i))^2 \:\:\: \boxed{???} \:\:\: \sum_{
 ( ) Impossible to tell
 
 # BEGIN SOLUTION
-**Answer** >
+**Answer**: >
 
 The quantity $\frac{1}{n} \sum_{i = 1}^n (y_i - F(x_i))^2$ 
 is the **mean squared error** (MSE) of model $F$. By definition, $F$ is the line that minimizes MSE over all possible linear models.
@@ -61,7 +61,7 @@ $$\displaystyle \left( \sum_{i = 1}^n \big| y_i - G(x_i) \big| \right)^2 \:\:\: 
 ( ) Impossible to tell
 
 # BEGIN SOLUTION
-**Answer** <
+**Answer**: <
 
 The quantity $\frac{1}{n} \sum_{i = 1}^n | y_i - G(x_i) |$  is the **mean absolute error** (MAE) of model $G$. By definition, $G$ is the line that minimizes MAE over all possible linear models.
 
@@ -91,7 +91,7 @@ Which line corresponds to line **$F$**?
 ( ) Line 2
 
 # BEGIN SOLUTION
-**Answer** Line 1
+**Answer**: Line 1
 
 The key idea is that models trained with squared loss (MSE) are more sensitive to outliers than models trained with absolute loss (MAE).  
 
