--- a/problems/wn25-midterm/q15.md
+++ b/problems/wn25-midterm/q15.md
@@ -10,7 +10,7 @@ Don't spend time on this question if you haven't attempted all other
 questions, as it is purely for (very little) `extra credit`.
 
 # BEGIN SOLUTION
-**Answer** $\frac{55}{100}$
+**Answer**: $\frac{55}{100}$
 
 We have 100 unique drivers and 10 different groups. The probability that `"WOLVAA01"` wins is calculated by adding up the chances that it is chosen in each group.
 
