--- a/problems/wn25-midterm/q09.md
+++ b/problems/wn25-midterm/q09.md
@@ -27,7 +27,7 @@ Some additional instructions:
 
 
 # BEGIN SOLUTION
-**Answer**
+**Answer**:
 
 <center>
 <img src="../assets/images/wn25-midterm/newplot.png" width=60%>
