--- a/problems/wn25-final/q09.md
+++ b/problems/wn25-final/q09.md
@@ -1,7 +1,5 @@
 # BEGIN PROB
 
-\[(11 pts)\]
-
 Consider a dataset of $n$ non-negative numbers,
 $x_1 < x_2 < \ldots < x_n$, that are evenly spaced. In other words,
 $x_{i+1} - x_i$ is some fixed positive constant, for all
@@ -21,9 +19,17 @@ In iteration **1**, **before** updating the locations of the centroids,
 how many points belong to each cluster? Give your answers in the form of
 expressions involving $n$ and/or constants.
 
-Cluster 1: Cluster 2:
+- Cluster 1: $\_\_\_\_$
+- Cluster 2: $\_\_\_\_$
 
 # BEGIN SOLUTION
+
+**Answer**:
+
+- Cluster 1: 1 point
+- Cluster 2: $n - 1$ points
+
+<average>77</average>
 
 # END SOLUTION
 
@@ -44,6 +50,13 @@ in the second box.)
 
 # BEGIN SOLUTION
 
+**Answer**:
+
+- Cluster 1: $x_1$ (i.e. $p = 1$)
+- Cluster 2: $x_\frac{2 + n}{2}$ (i.e. $q = \frac{2 + n}{2} = 1 + \frac{n}{2}$)
+
+<average>75</average>
+
 # END SOLUTION
 
 # END SUBPROB
@@ -54,9 +67,17 @@ In iteration **2**, **before** updating the locations of the centroids,
 how many points belong to each cluster? Give your answers in the form of
 expressions involving $n$ and/or constants.
 
-Cluster 1: Cluster 2:
+- Cluster 1: $\_\_\_\_$
+- Cluster 2: $\_\_\_\_$
 
 # BEGIN SOLUTION
+
+**Answer**:
+
+- Cluster 1: $\frac{n + 2}{4} = \frac{n}{4} + \frac{1}{2}$ points
+- Cluster 2: $\frac{3n - 2}{4} = \frac{3n}{4} - \frac{1}{2}$ points
+
+<average>43</average>
 
 # END SOLUTION
 
@@ -67,17 +88,11 @@ Cluster 1: Cluster 2:
 In one English sentence, name **and** describe the objective function
 that $k$-means clustering minimizes.
 
-::: responsebox
-1.5in
-:::
-
 # BEGIN SOLUTION
 
-# END SOLUTION
+**Answer**: The objective function that $k$-means clustering minimizes is called **inertia**, which is the sum of the squared distances between each point and the centroid closest to it.
 
-# END SUBPROB
-
-# BEGIN SOLUTION
+<average>72</average>
 
 # END SOLUTION
 
